name:                   hla-rti13
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Custom

author:                 James Cook <james.cook@usma.edu>
maintainer:             James Cook <james.cook@usma.edu>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               HLA RTI 1.3NG/DLC bindings
description:            HLA RTI bindings for DMSO RTI 1.3NG or the C++ 
                        Dynamic Link Compatible interface standard

Flag dlc-api
  description:          Use the DLC API (untested!)
  default:              False

Flag rti-ng
  description:          Use the RTI-NG API  (The versions included with the 
                        MATREX tools v4.1.1 and v4.3.4 are what I developed
                        against)
  default:              True

Flag need-fedtime
  description:          Include the 'fedtime' library as a link-time 
                        dependency.  Some RTIs have one, some don't.
  default:              True

Flag debug
  default:              True

Library
  ghc-options:          -fwarn-unused-imports
  hs-source-dirs:       src
  exposed-modules:      Network.HLA.RTI13
                        Network.HLA.RTI13.BaseTypes
                        Network.HLA.RTI13.FederateAmbServices
                        Network.HLA.RTI13.FedTime
                        Network.HLA.RTI13.FedTime.FFI
                        Network.HLA.RTI13.HsFederateAmbassador
                        Network.HLA.RTI13.HsFederateAmbassador.FFI
                        Network.HLA.RTI13.HsFederateAmbassador.Types
                        Network.HLA.RTI13.NullFederateAmbassador
                        Network.HLA.RTI13.RTIAmbServices
                        Network.HLA.RTI13.RTIAmbServices.FFI
                        Network.HLA.RTI13.RTIException
                        Network.HLA.RTI13.RTITypes
                        Network.HLA.RTI13.RTITypes.Types
                        Network.HLA.RTI13.RTITypes.FFI
  other-modules:        Network.HLA.RTI13.HsFederateAmbassador.FunPtrWrappers
                        Network.HLA.RTI13.OddsAndEnds
                        
  build-depends:        base >= 4, containers, syb, mtl,
                        bytestring,
                        stateref
  
  include-dirs:         include
  
  if os(darwin) 
    extra-libraries:    stdc++
  
  if flag(dlc-api)
    cc-options:         -DDLC_API
    extra-libraries:    rti13
    if flag(need-fedtime)
      extra-libraries:  fedtime13

  if flag(rti-ng)
    cc-options:         -DRTI_NG_MATREX_API
    extra-libraries:    RTI-NG
    if flag(need-fedtime)
      extra-libraries:  fedtime
  
  if flag(debug)
    cc-options:         -DDEBUG
  
  c-sources:            cbits/hsFederateAmb.cpp
                        cbits/oddsAndEnds.cpp
                        cbits/wrap/BaseTypes.cpp
                        cbits/wrap/fedtime.cpp
                        cbits/wrap/NullFederateAmbassador.cpp
                        cbits/wrap/RTIambServices.cpp
                        cbits/wrap/RTItypes.cpp
                        
  cc-options:           -DRTI_USES_STD_FSTREAM -DREENTRANT -DRTI_HAS_THREADS -DPOSIX_PTHREAD_SEMANTICS
