name:                   hla-rti13
version:                0.0.0.1
stability:              experimental

cabal-version:          >= 1.2
build-type:             Custom
-- Custom Setup.hs adds -L and -I dirs based on RTI_HOME environment variable,
-- if set.

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Unclassified
synopsis:               HLA RTI 1.3NG/DLC bindings
description:            HLA RTI bindings for DMSO RTI 1.3NG or the C++ 
                        Dynamic Link Compatible interface standard

tested-with:            GHC == 6.12.1, GHC == 7.0.2

Flag portico
  description:          Include a pkgconfig dependency on portico.  This
                        requires creating and installing a pkgconfig file
                        (portico doesn't come with one).  Uses DLC interface.
                        This is not necessary if $RTI_HOME is set.
  default:              False

Flag matrex
  description:          Include a pkgconfig dependency on the MATREX RTI.
                        This requires creating and installing a pkgconfig 
                        file (MATREX doesn't come with one).  Uses RTI-NG
                        interface.
                        This is not necessary if $RTI_HOME is set.
  default:              False

Flag dlc-api
  description:          Use the DLC API (Tested with poRTIco 1.0.2)
  default:              True

Flag rti-ng
  description:          Use the RTI-NG API  (Tested with poRTIco 1.0.2 and
                        MATREX tools v4.1.1 and v4.3.4)
  default:              False

Flag need-fedtime
  description:          Include the 'fedtime' library as a link-time 
                        dependency.  Some RTIs have one, some don't.
  default:              False

Flag debug
  default:              True

Library
  ghc-options:          -fwarn-unused-imports
  hs-source-dirs:       src
  exposed-modules:      Network.HLA.RTI13
                        Network.HLA.RTI13.BaseTypes
                        Network.HLA.RTI13.FederateAmbServices
                        Network.HLA.RTI13.FedTime
                        Network.HLA.RTI13.FedTime.FFI
                        Network.HLA.RTI13.HsFederateAmbassador
                        Network.HLA.RTI13.HsFederateAmbassador.FFI
                        Network.HLA.RTI13.HsFederateAmbassador.Types
                        Network.HLA.RTI13.NullFederateAmbassador
                        Network.HLA.RTI13.RTIAmbServices
                        Network.HLA.RTI13.RTIAmbServices.FFI
                        Network.HLA.RTI13.RTIException
                        Network.HLA.RTI13.RTITypes
                        Network.HLA.RTI13.RTITypes.Types
                        Network.HLA.RTI13.RTITypes.FFI
  other-modules:        Network.HLA.RTI13.HsFederateAmbassador.FunPtrWrappers
                        Network.HLA.RTI13.OddsAndEnds
                        
  build-depends:        base >= 4, containers, syb, mtl,
                        bytestring,
                        stateref
  
  include-dirs:         include
  
  if os(darwin) 
    extra-libraries:    stdc++
  
  if flag(portico)
    pkgconfig-depends: portico
  
  if flag(matrex)
    pkgconfig-depends: matrex-rti
  
  if flag(dlc-api)
    cpp-options:        -DDLC_API
    cc-options:         -DDLC_API
    
    extra-libraries:    rti13
    include-dirs:       include/dlc
    if flag(need-fedtime)
      extra-libraries:  fedtime13

  if flag(rti-ng)
    cpp-options:        -DRTI_NG_API
    cc-options:         -DRTI_NG_API
    extra-libraries:    RTI-NG
    -- no include-dirs; RTI-NG interface needs actual headers from the actual
    -- implementation, because they include some macro "constants".
    if flag(need-fedtime)
      extra-libraries:  fedtime
  
  if flag(debug)
    cpp-options:        -DDEBUG
    cc-options:         -DDEBUG
  
  c-sources:            cbits/hsFederateAmb.cpp
                        cbits/oddsAndEnds.cpp
                        cbits/wrap/BaseTypes.cpp
                        cbits/wrap/fedtime.cpp
                        cbits/wrap/NullFederateAmbassador.cpp
                        cbits/wrap/RTIambServices.cpp
                        cbits/wrap/RTItypes.cpp
                        
  cc-options:           -DRTI_USES_STD_FSTREAM -DREENTRANT -DRTI_HAS_THREADS -DPOSIX_PTHREAD_SEMANTICS
  
  -- Various forbidden flag combinations
  -- ===================================
  if (flag(dlc-api) && flag(rti-ng)) || !(flag(dlc-api) || flag(rti-ng))
    -- must select exactly one API
    build-depends:      base > 1 && < 0
    buildable:          False
  
  if flag(portico) && flag(matrex)
    -- must select no more than one implementation
    build-depends:      base > 1 && < 0
    buildable:          False
  
  if flag(matrex) && !(flag(rti-ng) && flag(need-fedtime))
    -- MATREX RTI requires RTI-NG API and fedtime lib
    -- (fedtime part should probably be in .pc file instead of .cabal file)
    build-depends:      base > 1 && < 0
    buildable:          False

